added new movies
